--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Projeto 01</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<meta charset="utf-8" />
-	<meta name="viewpoint" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+	<link rel="shortcut icon" type="image-x/png" href="/Projetos/Projeto_01/images/code.ico">
 </head>
 <body>
 
